# vpp-controller

./: .gitignore  LICENSE  README.md  _src_6c7614c0.txt  _src_849b8ad4.txt  _src_89b1b302.txt  main.py  pyproject.toml
.claude/: settings.local.json
code/Result Visualization/: result_functions.py
code/gridCreation/: create_grid.py  scratch.ipynb
data/: 0096WD_7_N001_LMP_12months.csv  0096WD_7_N001_spring_2025-04-10.csv  0096WD_7_N001_summer_2025-07-10.csv  GBreducednetwork.csv  bad_0096WD_7_N001_fall_2025-10-10.csv  case118.csv  case145.csv  case57.csv  case6ww.csv  case_ieee30.csv  example_input.csv  homework3bus no gen.csv  homework3bus.csv  price_df_0096WD_7_N001_2025-04-10.csv  pricedf_0096WD_7_N001_summer_2025_07_10.csv
data/clean_price_data/: pricedf_0096WD_7_N001_fall_2025_10_10.csv  pricedf_0096WD_7_N001_spring_2025_04_10.csv  pricedf_0096WD_7_N001_winter_2025_01_10.csv
data/demand/: old_demand_data.py
data/networks/: case14.csv  case24_ieee_rts.csv  case30.csv  case39.csv  case4gs.csv  case5.csv  case9.csv  case_illinois200.csv  homework3bus no gen.csv  homework3bus.csv  iceland.csv
outputs/: day_opt_metadata_20260422_175358.json  day_opt_metadata_20260422_181021.json  day_opt_metadata_20260422_185307.json  day_opt_metadata_20260422_185516.json  day_opt_metadata_20260423_094801.json  day_opt_variables_20260422_181021.npz  day_opt_variables_20260422_185307.npz  day_opt_variables_20260423_094801.npz
src/: results_format.py
tests/: court_bs.ipynb  day_optimization_results.csv  test_demo.py  test_hw3.py  test_three_node_case.py
(+8 files in other folders)
